@@ -1,23 +1,30 @@
 #include "driver.h"
-#include <math.h>
+#include "filter.h"
+//#include <math.h>
+
+//#ifndef M_E
+// #define M_E 2.7182818284590452353602874713527
+//#endif
 
 #define SAMPLE_RATE (4*48000) // 4x oversampling of standard output rate
-#ifndef M_E
- #define M_E 2.7182818284590452353602874713527
-#endif
 
 #define SHIFTMASK 0x07 // = hc55516 and mc3417
 //#define SHIFTMASK 0x0F // = mc3418
 
 #define	INTEGRATOR_LEAK_TC		0.001
+ #define leak   /*=pow(1.0/M_E, 1.0/(INTEGRATOR_LEAK_TC * 16000.0));*/ 0.939413062813475786119710824622305084524680890549441822009
 #define	FILTER_DECAY_TC			0.004
+ #define decay  /*=pow(1.0/M_E, 1.0/(FILTER_DECAY_TC * 16000.0));   */ 0.984496437005408405986988829697020369707861003180350567476
 #define	FILTER_CHARGE_TC		0.004
-#define	FILTER_MIN				0.0416
+ #define charge /*=pow(1.0/M_E, 1.0/(FILTER_CHARGE_TC * 16000.0));  */ 0.984496437005408405986988829697020369707861003180350567476
+
 #define	FILTER_MAX				1.0954
 #ifdef PINMAME
-#define	SAMPLE_GAIN				6500.0
+ #define ENABLE_LOWPASS_ESTIMATE 1
+ #define SAMPLE_GAIN			6500.0
 #else
-#define	SAMPLE_GAIN				10000.0
+ #define FILTER_MIN				0.0416
+ #define SAMPLE_GAIN			10000.0
 #endif
 
 struct hc55516_data
@@ -35,26 +42,28 @@ struct hc55516_data
 	double 	filter;
 	double	integrator;
 	double  gain;
+
+#ifdef PINMAME // add low pass filtering like chip spec suggests, and like real machines also had (=extreme filtering networks)
+#if ENABLE_LOWPASS_ESTIMATE
+	filter* filter_f;           /* filter used, ==0 if none */
+	filter_state* filter_state; /* state of the filter */
+
+	UINT32  length_estimate;    // for estimating the clock rate/'default' sample playback rate of the machine
+	UINT32  length_estimate_runs;
+#endif
+#endif
 };
 
 
 static struct hc55516_data hc55516[MAX_HC55516];
-static double charge, decay, leak;
-
 
 static void hc55516_update(int num, INT16 *buffer, int length);
-
 
 
 int hc55516_sh_start(const struct MachineSound *msound)
 {
 	const struct hc55516_interface *intf = msound->sound_interface;
 	int i;
-
-	/* compute the fixed charge, decay, and leak time constants */
-	charge = pow(1.0/M_E, 1.0 / (FILTER_CHARGE_TC * 16000.0));
-	decay = pow(1.0/M_E, 1.0 / (FILTER_DECAY_TC * 16000.0));
-	leak = pow(1.0/M_E, 1.0 / (INTEGRATOR_LEAK_TC * 16000.0));
 
 	/* loop over HC55516 chips */
 	for (i = 0; i < intf->num; i++)
@@ -67,11 +76,19 @@ int hc55516_sh_start(const struct MachineSound *msound)
 
 		/* create the stream */
 		sprintf(name, "HC55516 #%d", i);
-		chip->channel = stream_init(name, intf->volume[i] & 0xff, SAMPLE_RATE, i, hc55516_update);
+		chip->channel = stream_init(name, intf->volume[i], SAMPLE_RATE, i, hc55516_update);
 		chip->gain = SAMPLE_GAIN;
 		/* bail on fail */
 		if (chip->channel == -1)
 			return 1;
+
+#ifdef PINMAME
+#if ENABLE_LOWPASS_ESTIMATE
+		chip->filter_f = 0;
+		chip->length_estimate = 0;
+		chip->length_estimate_runs = 0;
+#endif
+#endif
 	}
 
 	/* success */
@@ -89,25 +106,75 @@ void hc55516_update(int num, INT16 *buffer, int length)
 	if (length == 0)
 		return;
 
+#ifdef PINMAME
+#if ENABLE_LOWPASS_ESTIMATE
+	// 'detect' clock rate and guesstimate low pass filtering from this
+	// not perfect, as some machines vary the clock rate, depending on the sample played  :/
+ #define LOWPASS_ESTIMATE_CYCLES 666
+	if (chip->update_count == 0 // is update coming from clock?
+		&& length < SAMPLE_RATE/12000 // and no outlier?
+		&& chip->length_estimate_runs < LOWPASS_ESTIMATE_CYCLES) // and we are still tracking the clock?
+	{
+		chip->length_estimate += length;
+		chip->length_estimate_runs++;
+	}
+	else if (chip->length_estimate_runs == LOWPASS_ESTIMATE_CYCLES) // enough tracking of the clock -> enable filter and estimate for which cut frequency
+	{
+		double freq_scale;
+		
+		chip->length_estimate /= LOWPASS_ESTIMATE_CYCLES;
+
+		freq_scale = ((INT32)chip->length_estimate - SAMPLE_RATE/48000) / (double)(SAMPLE_RATE/12000-1 - SAMPLE_RATE/48000); // estimate to end up within 0..1 (with all tested machines)
+		freq_scale = max(min(freq_scale, 1.), 0.); // make sure to be in 0..1
+		freq_scale = 1.-sqrt(sqrt(freq_scale));    // penalty for low clock rates -> even more of the lower frequencies removed then
+
+		if (freq_scale < 0.999) // assume that high clock rates/most modern machines do not need to be filtered at all (improves clarity at the price of some noise)
+		{
+			chip->filter_f = filter_lp_fir_alloc((2000 + 22000*freq_scale)/SAMPLE_RATE, 51); // magic, majority of modern machines up to TZ = 24000Hz then, older/low sampling rates = ~7000Hz, down to ~2500Hz for Black Knight //!! Xenon should actually end up at lower Hz, so maybe handle that one specifically?
+			chip->filter_state = filter_state_alloc(); //!! leaks
+			filter_state_reset(chip->filter_f, chip->filter_state);
+		}
+
+		chip->length_estimate_runs++;
+	}
+#endif
+#endif
+
 	/* track how many samples we've updated without a clock, e.g. if its too many, then chip got no data = silence */
 	chip->update_count += length;
 	if (chip->update_count > SAMPLE_RATE / 32)
 	{
 		chip->update_count = SAMPLE_RATE; // prevent overflow
-		chip->next_value = 0;
+		chip->next_value /= 2; // PINMAME: fade out
+
+		chip->integrator = 0.; // PINMAME: reset all state
+		chip->filter = 0.;
+		chip->shiftreg = 0;
 	}
 
 	/* compute the interpolation slope */
 	// as the clock drives the update (99% of the time), we can interpolate only within the current update phase
 	// for the remaining cases where the output drives the update, length is rather small (1 or very low 2 digit range): then the last sample will simply be repeated
+	INT32 next_v = chip->next_value;
 	data = chip->curr_value;
-	slope = (((INT32)chip->next_value - data)<<16) / length; // PINMAME: increase/fix precision!
-	data <<= 16;
-	chip->curr_value = chip->next_value;
 
-	/* reset the sample count */
-	for (i = 0; i < length; i++, data += slope)
-		*buffer++ = data>>16;
+	slope = ((next_v - data) << 16) / length; // PINMAME: increase/fix precision issue!
+	data <<= 16;
+	chip->curr_value = next_v;
+
+#ifdef PINMAME
+#if ENABLE_LOWPASS_ESTIMATE
+	if (chip->filter_f)
+		for (i = 0; i < length; i++, data += slope)
+		{
+			filter_insert(chip->filter_f, chip->filter_state, data >> 16);
+			*buffer++ = filter_compute(chip->filter_f, chip->filter_state);
+		}
+	else
+#endif
+#endif
+		for (i = 0; i < length; i++, data += slope)
+			*buffer++ = data >> 16;
 }
 
 
@@ -121,9 +188,9 @@ void hc55516_clock_w(int num, int state)
 	chip->last_clock = clock;
 
 	/* speech clock changing (active on rising edge) */
-	if (diffclock && clock)
+	if (diffclock && clock) //!! mc341x would need !clock
 	{
-		double integrator = chip->integrator, temp;
+		double temp;
 
 		/* clear the update count */
 		chip->update_count = 0;
@@ -132,31 +199,34 @@ void hc55516_clock_w(int num, int state)
 
 		/* move the estimator up or down a step based on the bit */
 		if (chip->databit)
-			integrator += chip->filter;
+			chip->integrator += chip->filter;
 		else
-			integrator -= chip->filter;
+			chip->integrator -= chip->filter;
 
 		/* simulate leakage */
-		integrator *= leak;
+		chip->integrator *= leak;
 
-		/* if we got all 0's or all 1's in the last n bits, bump the step up */
+		/* if we got all 0's or all 1's in the last n bits, bump the step up by charging the filter */
 		if (chip->shiftreg == 0 || chip->shiftreg == SHIFTMASK)
 		{
-			chip->filter = FILTER_MAX - (FILTER_MAX - chip->filter) * charge;
+			chip->filter = (1.-charge) * FILTER_MAX + chip->filter * charge;
+#ifndef PINMAME // cannot happen
 			if (chip->filter > FILTER_MAX)
 				chip->filter = FILTER_MAX;
+#endif
 		}
 		/* simulate decay */
 		else
 		{
 			chip->filter *= decay;
+#ifndef PINMAME //!! should not be needed from chip spec, as it will either alternate 0/1 databits or output 'real' silence
 			if (chip->filter < FILTER_MIN)
 				chip->filter = FILTER_MIN;
+#endif
 		}
 
-		/* compute the sample as a 32-bit word */
-		temp = integrator * chip->gain;
-		chip->integrator = integrator;
+		/* compute the sample as a 16-bit word */
+		temp = chip->integrator * chip->gain;
 
 #ifdef PINMAME
 #if 1
@@ -184,10 +254,10 @@ void hc55516_clock_w(int num, int state)
 #endif
 #else
 		/* compress the sample range to fit better in a 16-bit word */
-		if (temp < 0)
-			chip->next_value = (int)(temp / (-temp * (1.0 / 32768.0) + 1.0));
+		if (temp < 0.)
+			chip->next_value = (int)(temp / (temp * -(1.0 / 32768.0) + 1.0));
 		else
-			chip->next_value = (int)(temp / (temp * (1.0 / 32768.0) + 1.0));
+			chip->next_value = (int)(temp / (temp *  (1.0 / 32768.0) + 1.0));
 #endif
 		/* update the output buffer before changing the registers */
 		stream_update(chip->channel, 0);
@@ -200,6 +270,7 @@ void hc55516_set_gain(int num, double gain)
 	hc55516[num].gain = gain;
 }
 #endif
+
 
 void hc55516_digit_w(int num, int data)
 {
