@@ -6,8 +6,9 @@ Improve sound pitch for old Sterns (Catacomb, Flight 2000, Freefall, Lightning, 
 Further improved BSMT2000 sound core for Sega, Alvin G., Data East (Batman and newer), and Stern (up to Terminator 3) DMD generation games
 Further improved AT91 sound core for the rest of the Stern DMDs (Elvis, LOTR, RBION, Sopranos, Nascar/Grand Prix/Dale Jr.)
  but still one should avoid high volume levels for these machines (~24 and above, for example on Nascar)
-Slightly improve FM emulation cores (like AY8910, YMF262 and YM2151: so a lot of Gottlieb generations, old Ballys, etc)
-Improve DMD brightness level mapping for Gottlieb GTS3s
+Slightly improved FM sound emulation cores (like AY8910, YMF262 and YM2151: so a lot of Gottlieb generations, old Ballys, pre-DCS games, etc)
+Improved HC55516 CVSD sound core (Gorgar up to Twilight Zone, etc) and add some lowpass filtering (active only on older machines) to remove some of the audible noise
+Improved DMD brightness level mapping for Gottlieb GTS3s
 
 *** ROM SUPPORT *** Thanks to Timmo, Chad Hendrickson
 Kinda new:
